@@ -58,7 +58,7 @@ setMethodS3("rspToHtml", "default", function(file=NULL, path=NULL, outFile=NULL,
   sourceRsp(file=pathname, response=response, ...);
 
   invisible(getAbsolutePath(response));
-})
+}, private=TRUE) # rspToHtml()
 
 
 ############################################################################
